force-app/main/default/objects/Application__c/fields/Candidate_Account__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>