force-app/main/default/objects/Application__c/fields/Candidate_Contact__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>