force-app/main/default/objects/Application__c/fields/GitHub_Repo_Count__c.field-meta.xml
<CustomField>
    <fullName>GitHub_Repo_Count__c</fullName>
    <label>GitHub Repo Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>