force-app/main/default/objects/Application__c/fields/Gtihub_Username__c.field-meta.xml
<CustomField>
    <fullName>Gtihub_Username__c</fullName>
    <externalId>true</externalId>
    <label>Gtihub Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>