force-app/main/default/objects/Application__c/fields/Skill_Score__c.field-meta.xml
<CustomField>
    <fullName>Skill_Score__c</fullName>
    <label>Skill Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>