force-app/main/default/objects/Application__c/fields/Top_Language__c.field-meta.xml
<CustomField>
    <fullName>Top_Language__c</fullName>
    <label>Top Language</label>
    <length>200</length>
    <type>Text</type>
</CustomField>